--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     <body>
         <header>
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="aboutme.html">About</a>
                 <a href="passion.html">Passion</a>
                 <a href="skills.html">Skills</a>
                 <a href="projects.html">Projects</a>
-                <a href="">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
 
