--- a/contact.html
+++ b/contact.html
@@ -5,29 +5,51 @@
         <style>
             body{
                 background-color: cadetblue;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                margin:0;
+                padding:0;
+                display:flex;
+                justify-content: center;
+                align-items:center;
+                min-height: 100vh;
             }
             .contact{
+                background: rgba(255,255,255,0.9);
                 padding:50px;
                 text-align:center;
+                border-radius:15px;
+                box-shadow:0 10px 25px rgba(0,0,0,0.2);
+                max-width: 600px;
+                width:90%;
+            
             }
             h1{
-                font-size: 60px;
-                color:rgb(41, 33, 88);
-                font-family: 'Times New Roman', Times, serif;
+                font-size: 42px;
+                color:#2a5b5d;
+                margin-bottom: 30px;
+                font-weight: bold;
             }
             .contact-info p{
                 margin:30px 0;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
+            } 
             a{
-                color:rgb(1, 1, 74);
-                font-size:30px;
+               display: inline-block;
+                color:#2a5b5d;
+                font-size:22px;
                 text-decoration:none;
-                box-shadow: 0 5px 10px rgb(37, 36, 36);
+                box-shadow: 0 5px 10px rgba(0,0,0,0.1);
                 padding:15px;
-                font-weight: bold;
-                background-color: rgb(158, 156, 156);
+                font-weight: 600;
+                background-color: #cecece;
+                border-radius: 8px;
+                transition:all 0.3s ease; 
                
+            }
+            a:hover{
+                background-color: #2a5b5d;
+                color:white;
+                transform: translate(-3px);
+                box-shadow:0 6px 12px rgba(0,0,0,0.15);
             }
         </style>
     </head>
@@ -35,9 +57,9 @@
         <section class="contact">
             <h1>Contact Me</h1>
             <div class="contact-info">
-                <p><a href=" mailto:akhilaa1310@gamil.com">📧MAIL:akhilaa1310@gamil.com</a></p><br>
-                <p><a href="https://www.linkedin.com/in/akhila-mangalgi-846007256" target="_blank">💼Linkedin</a></p><br>
-                <p><a href="https://github.com/AKHILA031103/POWER-BI" target="_blank">🐙Github</a></p><br>
+                <p><a href=" mailto:akhilaa1310@gamil.com">✉Mail:akhilaa1310@gamil.com</a></p><br>
+                <p><a href="https://www.linkedin.com/in/akhila-mangalgi-846007256" target="_blank">[in]Linkedin</a></p><br>
+                <p><a href="https://github.com/AKHILA031103/POWER-BI" target="_blank">😺Github</a></p><br>
             </div>
         </section>
     </body>
